2003-04-14  Jani Monoses  <jani@iv.ro>	
	
	* src/load.c:
	Change #else if to #elif so it compiles when TFTP is disabled. 
	
2003-04-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/main.c (do_go): Silence unused variable warning when no net.

2003-04-04  Mark Salter  <msalter@redhat.com>

	* src/main.c (do_go): Add -n switch to optionally stop network
	device. Mask interrupts on all comm channels.
	Don't scan for -n unless ethernet configured in.
	* doc/redboot_cmds.sgml: Update go command info.

2003-04-03  Gary Thomas  <gary@mlbassoc.com>

	* src/load.c: Better handling of default download mode.  Also
	display information when I/O errors occor (was silent).
	(do_load): Handle case when X-modem protocol is disabled.

	* src/net/http_client.c: 
	* include/net/http.h: Improve parsing of HTTP responses for errors.

2003-03-28  Gary Thomas  <gary@mlbassoc.com>  inspired by
2003-03-28  Jani Monoses <jani@iv.ro>	

	* src/load.c: 
	* cdl/redboot.cdl: Make TFTP download protocol optional.

2003-03-20  Mark Salter  <msalter@redhat.com>

	* include/flash_config.h (CONFIG_NETPORT): New config option.
	* src/flash.c: Support CONFIG_NETPORT.
	* cdl/redboot.cdl: New option to select default ethernet device.
	* src/net/net_io.c: Support multiple ethernet devices.
	* include/net/net.h: Add externs for net_devname and net_devindex.
	
2002-03-19  John Dallaway  <jld@ecoscentric.com>

	* doc/redboot_installing.sgml: Update Atmel AT91EB40 RedBoot
	installation instructions.

2003-03-18  Mark Salter  <msalter@redhat.com>

	* doc/redboot_installing.sgml: Add XScale IXDP425 and GRG.

2003-03-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/main.c (do_version): Test for CYGPKG_REDBOOT_FLASH as
	CYGPKG_IO_FLASH can be loaded with no underlying hardware drivers!

2003-03-03  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c (set_console_baud_rate): Avoid "unused" warning.

2003-03-03  Knud Woehler  <knud.woehler@microplex.de>
